[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inconsolata.otf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://ColorRect.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Menu Button" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -262.0
margin_bottom = 88.0
text = "Menu"

[node name="Center Menu" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = -100.0
margin_right = 205.5
margin_bottom = 100.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="Center Menu"]
margin_right = 411.0
margin_bottom = 90.0
size_flags_vertical = 3
text = "Start"

[node name="Settings" type="Button" parent="Center Menu"]
margin_top = 110.0
margin_right = 411.0
margin_bottom = 200.0
size_flags_vertical = 3
text = "Settings"

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 1415.0
margin_bottom = 2850.0

[node name="ColorRect" type="ColorRect" parent="Settings"]
margin_right = 1415.0
margin_bottom = 2850.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 3 )

[node name="Close" type="Button" parent="Settings"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -246.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 100.0
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
editor/display_folded = true
margin_right = 497.0
margin_bottom = 253.0
size_flags_horizontal = 2
theme = SubResource( 5 )
custom_constants/separation = 15

[node name="Gravity" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_right = 497.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Gravity"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 47.0
text = "Gravity"

[node name="LineEdit" type="LineEdit" parent="Settings/VBoxContainer/Gravity"]
margin_left = 144.0
margin_right = 394.0
margin_bottom = 52.0
text = "20"

[node name="Power" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 67.0
margin_right = 497.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Power"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 47.0
text = "Power"

[node name="LineEdit" type="LineEdit" parent="Settings/VBoxContainer/Power"]
margin_left = 104.0
margin_right = 354.0
margin_bottom = 52.0
text = "5"

[node name="Bounce" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 134.0
margin_right = 497.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Bounce"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 47.0
text = "Bounce"

[node name="LineEdit" type="LineEdit" parent="Settings/VBoxContainer/Bounce"]
margin_left = 124.0
margin_right = 374.0
margin_bottom = 52.0
text = "0.5"

[node name="Friction" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 201.0
margin_right = 497.0
margin_bottom = 253.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Friction"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 47.0
text = "Friction"

[node name="LineEdit" type="LineEdit" parent="Settings/VBoxContainer/Friction"]
margin_left = 164.0
margin_right = 414.0
margin_bottom = 52.0
text = "0"

[node name="Level" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -444.5
margin_right = 436.0
margin_bottom = 444.5

[node name="Next Level" type="VBoxContainer" parent="Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -74.5
margin_right = 156.0
margin_bottom = 74.5
custom_constants/separation = 15

[node name="Label" type="Label" parent="Level/Next Level"]
margin_right = 312.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Score: "

[node name="Next" type="Button" parent="Level/Next Level"]
margin_top = 66.0
margin_right = 312.0
margin_bottom = 134.0
text = "Next Level"

[node name="Overlay Menu" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -236.0
margin_right = 232.0
margin_bottom = 236.0
custom_constants/separation = 20

[node name="Reset" type="Button" parent="Overlay Menu"]
margin_right = 464.0
margin_bottom = 103.0
size_flags_vertical = 3
text = "Reset"

[node name="Back" type="Button" parent="Overlay Menu"]
margin_top = 123.0
margin_right = 464.0
margin_bottom = 226.0
size_flags_vertical = 3
text = "Back"

[node name="Settings" type="Button" parent="Overlay Menu"]
margin_top = 246.0
margin_right = 464.0
margin_bottom = 349.0
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="Overlay Menu"]
margin_top = 369.0
margin_right = 464.0
margin_bottom = 472.0
size_flags_vertical = 3
text = "Quit"
[connection signal="pressed" from="Menu Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="pressed" from="Center Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Center Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Settings/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Level/Next Level/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Overlay Menu/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Overlay Menu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Overlay Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Overlay Menu/Quit" to="." method="_on_Quit_pressed"]
